--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
 }
 
-mainClassName = "webappcraft.reports.main.Main"
+mainClassName = "webappcraft.reporting.main.Main"
 applicationDefaultJvmArgs = ["-Dfile.encoding=UTF-8"]
 
 
